--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,5 +1,8 @@
 <!doctype html>
 <html class="js" lang="{{ request.locale.iso_code }}">
+
+AB Testing by team
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
